// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tea/render.spec.ts > rendering array 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "content": "1",
              "endPos": {
                "col": 1,
                "row": 0,
              },
              "startPos": {
                "col": 0,
                "row": 0,
              },
              "type": "string",
            },
          ],
          "endPos": {
            "col": 1,
            "row": 0,
          },
          "startPos": {
            "col": 0,
            "row": 0,
          },
          "type": "node",
        },
        {
          "children": [
            {
              "content": "
",
              "endPos": {
                "col": 0,
                "row": 1,
              },
              "startPos": {
                "col": 1,
                "row": 0,
              },
              "type": "string",
            },
          ],
          "endPos": {
            "col": 0,
            "row": 1,
          },
          "startPos": {
            "col": 1,
            "row": 0,
          },
          "type": "node",
        },
        {
          "children": [
            {
              "content": "2",
              "endPos": {
                "col": 1,
                "row": 1,
              },
              "startPos": {
                "col": 0,
                "row": 1,
              },
              "type": "string",
            },
          ],
          "endPos": {
            "col": 1,
            "row": 1,
          },
          "startPos": {
            "col": 0,
            "row": 1,
          },
          "type": "node",
        },
      ],
      "endPos": {
        "col": 1,
        "row": 1,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "array",
    },
  ],
  "endPos": {
    "col": 1,
    "row": 1,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;

exports[`tea/render.spec.ts > rendering empty array 1`] = `
{
  "children": [
    {
      "children": [],
      "endPos": {
        "col": 0,
        "row": 0,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "array",
    },
  ],
  "endPos": {
    "col": 0,
    "row": 0,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;

exports[`tea/render.spec.ts > rendering empty string 1`] = `
{
  "children": [
    {
      "content": "1",
      "endPos": {
        "col": 1,
        "row": 0,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "string",
    },
    {
      "content": "",
      "endPos": {
        "col": 1,
        "row": 0,
      },
      "startPos": {
        "col": 1,
        "row": 0,
      },
      "type": "string",
    },
    {
      "content": "2",
      "endPos": {
        "col": 2,
        "row": 0,
      },
      "startPos": {
        "col": 1,
        "row": 0,
      },
      "type": "string",
    },
  ],
  "endPos": {
    "col": 2,
    "row": 0,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;

exports[`tea/render.spec.ts > rendering multi-line interpolation 1`] = `
{
  "children": [
    {
      "content": "before",
      "endPos": {
        "col": 6,
        "row": 0,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "string",
    },
    {
      "content": "first line
second line
third line",
      "endPos": {
        "col": 10,
        "row": 2,
      },
      "startPos": {
        "col": 6,
        "row": 0,
      },
      "type": "string",
    },
    {
      "content": "after",
      "endPos": {
        "col": 15,
        "row": 2,
      },
      "startPos": {
        "col": 10,
        "row": 2,
      },
      "type": "string",
    },
  ],
  "endPos": {
    "col": 15,
    "row": 2,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;

exports[`tea/render.spec.ts > rendering multi-line template with interpolation 1`] = `
{
  "children": [
    {
      "content": "
      Hello
        ",
      "endPos": {
        "col": 8,
        "row": 2,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "string",
    },
    {
      "content": "world",
      "endPos": {
        "col": 13,
        "row": 2,
      },
      "startPos": {
        "col": 8,
        "row": 2,
      },
      "type": "string",
    },
    {
      "content": "
      Goodbye
    ",
      "endPos": {
        "col": 4,
        "row": 4,
      },
      "startPos": {
        "col": 13,
        "row": 2,
      },
      "type": "string",
    },
  ],
  "endPos": {
    "col": 4,
    "row": 4,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;

exports[`tea/render.spec.ts > rendering nested interpolation 1`] = `
{
  "children": [
    {
      "content": "outer",
      "endPos": {
        "col": 5,
        "row": 0,
      },
      "startPos": {
        "col": 0,
        "row": 0,
      },
      "type": "string",
    },
    {
      "children": [
        {
          "content": "(inner)",
          "endPos": {
            "col": 12,
            "row": 0,
          },
          "startPos": {
            "col": 5,
            "row": 0,
          },
          "type": "string",
        },
      ],
      "endPos": {
        "col": 12,
        "row": 0,
      },
      "startPos": {
        "col": 5,
        "row": 0,
      },
      "type": "node",
    },
    {
      "content": "end",
      "endPos": {
        "col": 15,
        "row": 0,
      },
      "startPos": {
        "col": 12,
        "row": 0,
      },
      "type": "string",
    },
  ],
  "endPos": {
    "col": 15,
    "row": 0,
  },
  "startPos": {
    "col": 0,
    "row": 0,
  },
  "type": "node",
}
`;
